# Whitebox-crypto-AES

./: .gitignore  .gitmodules  .travis.yml  .travis.yml-matrix  AES_code_transformation.ods  BGEAttack.cpp  BGEAttack.h  BGEAttack_test.cpp  CMakeLists-gtest.txt.in  CMakeLists.txt  EncTools.cpp  EncTools.h  GenericAES.cpp  GenericAES.h  InputObject.cpp  InputObject.h  InputObjectBuffer.cpp  InputObjectBuffer.h  InputObjectIOstream.cpp  InputObjectIOstream.h  InputObjectIstream.cpp  InputObjectIstream.h  InputObjectOstream.cpp  InputObjectOstream.h  LinearAffineEq.cpp  LinearAffineEq.h  LinearAffineEq_test.cpp  MGR_NTL.cpp  MGR_NTL.h  Makefile  MixingBijections.cpp  MixingBijections.h  NTLUtils.cpp  NTLUtils.h  README.md  RingBuffer.cpp  RingBuffer.h  WBAES.cpp  WBAES.h  WBAESGenerator.cpp  (+18 more)
.github/workflows/: build.yml
ext/boost/: build.py
ext/boost/lib/windows/win32/: libboost_iostreams-vc141-mt-1_64.lib  libboost_iostreams-vc141-mt-gd-1_64.lib  libboost_random-vc141-mt-1_64.lib  libboost_random-vc141-mt-gd-1_64.lib  libboost_system-vc141-mt-1_64.lib  libboost_system-vc141-mt-gd-1_64.lib
ext/ntl/: README.txt
ext/ntl/GetTime/: GetTime1.cpp  GetTime2.cpp  GetTime3.cpp  GetTime5.cpp
ext/ntl/MakeDesc/: MakeDesc.cpp  MakeDescAux.cpp
ext/ntl/doc/: GF2.txt  GF2E.txt  GF2EX.txt  GF2EXFactoring.txt  GF2X.txt  GF2XFactoring.txt  GF2XVec.txt  HNF.txt  LLL.txt  RR.txt  ZZ.txt  ZZVec.txt  ZZX.txt  ZZXFactoring.txt  ZZ_p.txt  ZZ_pE.txt  ZZ_pEX.txt  ZZ_pEXFactoring.txt  ZZ_pX.txt  ZZ_pXFactoring.txt  config.txt  conversions.txt  copying.txt  flags.txt  lzz_p.txt  lzz_pE.txt  lzz_pEX.txt  lzz_pEXFactoring.txt  lzz_pX.txt  lzz_pXFactoring.txt  mat_GF2.txt  mat_GF2E.txt  mat_RR.txt  mat_ZZ.txt  mat_ZZ_p.txt  mat_ZZ_pE.txt  mat_lzz_p.txt  mat_lzz_pE.txt  mat_poly_ZZ.txt  mat_poly_ZZ_p.txt  (+40 more)
ext/ntl/include/NTL/: FFT.h  FacVec.h  GF2.h  GF2E.h  GF2EX.h  GF2EXFactoring.h  GF2X.h  GF2XFactoring.h  GF2XVec.h  HNF.h  LLL.h  RR.h  SPMM_ASM.h  WordVector.h  ZZ.h  ZZVec.h  ZZX.h  ZZXFactoring.h  ZZ_p.h  ZZ_pE.h  ZZ_pEX.h  ZZ_pEXFactoring.h  ZZ_pX.h  ZZ_pXFactoring.h  c_lip.h  config.h  ctools.h  fileio.h  g_lip.h  lip.h  lzz_p.h  lzz_pE.h  lzz_pEX.h  lzz_pEXFactoring.h  lzz_pX.h  lzz_pXFactoring.h  mach_desc.h  mat_GF2.h  mat_GF2E.h  mat_RR.h  (+48 more)
ext/ntl/misc/: gen_gmp_aux.cpp  gen_lip_gmp_aux.cpp  newnames.cpp
ext/ntl/prj/vc141/: ntl.sln
ext/ntl/prj/vc141/ntl/: ntl.vcxproj  ntl.vcxproj.filters
ext/ntl/src/: FFT.cpp  FacVec.cpp  GF2.cpp  GF2E.cpp  GF2EX.cpp  GF2EXFactoring.cpp  GF2X.cpp  GF2X1.cpp  GF2XFactoring.cpp  GF2XVec.cpp  G_LLL_FP.cpp  G_LLL_QP.cpp  G_LLL_RR.cpp  G_LLL_XD.cpp  GetTime.cpp  HNF.cpp  LLL.cpp  LLL_FP.cpp  LLL_QP.cpp  LLL_RR.cpp  LLL_XD.cpp  RR.cpp  WordVector.cpp  ZZ.cpp  ZZVec.cpp  ZZX.cpp  ZZX1.cpp  ZZXCharPoly.cpp  ZZXFactoring.cpp  ZZ_p.cpp  ZZ_pE.cpp  ZZ_pEX.cpp  ZZ_pEXFactoring.cpp  ZZ_pX.cpp  ZZ_pX1.cpp  ZZ_pXCharPoly.cpp  ZZ_pXFactoring.cpp  c_lip_impl.h  ctools.cpp  fileio.cpp  (+32 more)
ext/ntl/tests/: BerlekampTest.cpp  BerlekampTestOut  BitMatTest.cpp  CanZassTest.cpp  CanZassTestIn  CharPolyTest.cpp  CharPolyTestIn  CharPolyTestOut  GF2EXTest.cpp  GF2XTest.cpp  LLLTest.cpp  LLLTestIn  LLLTestOut  MatrixTest.cpp  MatrixTestIn  MatrixTestOut  MoreFacTest.cpp  MoreFacTestIn  QuadTest.cpp  QuadTestIn  QuadTestOut  QuickTest.cpp  RRTest.cpp  RRTestIn  RRTestOut  ZZXFacTest.cpp  ZZXFacTestIn  ZZXFacTestOut  ZZ_pEXTest.cpp  lzz_pEXTest.cpp  subset.cpp
prj/vc141/: wbaes.sln
prj/vc141/wbaes/: wbaes.vcxproj  wbaes.vcxproj.filters
prj/vc141/wbaes_test/: wbaes_test.vcxproj  wbaes_test.vcxproj.filters
test/: WBAes.cpp  wbaes_test.cpp
tests/: CMakeLists.txt  Commons.cpp  Commons.h  EncToolsTest.cpp  RingBufferTest.cpp  WBAes.cpp  tester.cpp
